--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,7 @@
             <button id="load-btn" type="submit">Load report</button>
           </form>
           <p id="form-error" class="error"></p>
+          <a id="open-generator" class="link" href="./generator.html">Open SVG/JSON generator</a>
           <div id="action-help" class="hidden"></div>
         </div>
         <aside class="hero-side">
