--- a/web/generator.html
+++ b/web/generator.html
@@ -54,6 +54,29 @@
       <label id="gen-theme-label" for="gen-theme">Theme</label>
       <select id="gen-theme"></select>
 
+      <section id="gen-custom-theme-panel" class="custom-theme-panel hidden">
+        <h3 id="gen-custom-theme-title">Custom theme</h3>
+        <p id="gen-custom-theme-hint" class="muted custom-theme-hint">Adjust colors manually for SVG cards.</p>
+        <div class="custom-theme-grid">
+          <div class="custom-color-field"><label id="gen-color-label-bg_start" for="gen-color-bg_start">bg_start</label><input id="gen-color-bg_start" type="color" value="#F8FBFF"></div>
+          <div class="custom-color-field"><label id="gen-color-label-bg_end" for="gen-color-bg_end">bg_end</label><input id="gen-color-bg_end" type="color" value="#EEF5FF"></div>
+          <div class="custom-color-field"><label id="gen-color-label-border" for="gen-color-border">border</label><input id="gen-color-border" type="color" value="#A8CBFF"></div>
+          <div class="custom-color-field"><label id="gen-color-label-panel" for="gen-color-panel">panel</label><input id="gen-color-panel" type="color" value="#FFFFFF"></div>
+          <div class="custom-color-field"><label id="gen-color-label-overlay" for="gen-color-overlay">overlay</label><input id="gen-color-overlay" type="color" value="#EDF4FF"></div>
+          <div class="custom-color-field"><label id="gen-color-label-chip_bg" for="gen-color-chip_bg">chip_bg</label><input id="gen-color-chip_bg" type="color" value="#E7F0FF"></div>
+          <div class="custom-color-field"><label id="gen-color-label-chip_text" for="gen-color-chip_text">chip_text</label><input id="gen-color-chip_text" type="color" value="#2D4E83"></div>
+          <div class="custom-color-field"><label id="gen-color-label-text" for="gen-color-text">text</label><input id="gen-color-text" type="color" value="#14284B"></div>
+          <div class="custom-color-field"><label id="gen-color-label-muted" for="gen-color-muted">muted</label><input id="gen-color-muted" type="color" value="#3F6191"></div>
+          <div class="custom-color-field"><label id="gen-color-label-accent" for="gen-color-accent">accent</label><input id="gen-color-accent" type="color" value="#16A4E0"></div>
+          <div class="custom-color-field"><label id="gen-color-label-accent_2" for="gen-color-accent_2">accent_2</label><input id="gen-color-accent_2" type="color" value="#1AB9A2"></div>
+          <div class="custom-color-field"><label id="gen-color-label-accent_soft" for="gen-color-accent_soft">accent_soft</label><input id="gen-color-accent_soft" type="color" value="#B8DBFF"></div>
+          <div class="custom-color-field"><label id="gen-color-label-track" for="gen-color-track">track</label><input id="gen-color-track" type="color" value="#D3E3FB"></div>
+          <div class="custom-color-field"><label id="gen-color-label-pass" for="gen-color-pass">pass</label><input id="gen-color-pass" type="color" value="#0F7F39"></div>
+          <div class="custom-color-field"><label id="gen-color-label-warn" for="gen-color-warn">warn</label><input id="gen-color-warn" type="color" value="#B55A0C"></div>
+          <div class="custom-color-field"><label id="gen-color-label-fail" for="gen-color-fail">fail</label><input id="gen-color-fail" type="color" value="#BE1D2D"></div>
+        </div>
+      </section>
+
       <label id="gen-locale-label" for="gen-locale">Locale</label>
       <select id="gen-locale">
         <option value="en">en</option>
